[package]
name = "oxytail-base"
description = "Building block for creating oxytail themes"
documentation = "https://docs.rs/oxytail-base/latest/oxytail_base"
repository = "https://github.com/golota60/oxytail"
keywords = ["floem", "gui", "floem-themes", "daisyui", "widgets"]
categories = ["gui"]
license = "MIT"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = "0.1.1"

