[package]
name = "oxytail-theme-dark"
description = "Dark theme for oxytail-base"
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = { git = "https://github.com/lapce/floem", rev = "e304d30f8771a28788904d64464d8fd192d07439" }
oxytail-base = { path = "../oxytail-base"}
