[package]
name = "oxytail-theme-dark"
description = "Dark theme for oxytail-base"
license = "MIT"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = "0.1.1"
oxytail-base = "0.1.1"
oxytail-theme-defaults = "0.1.1"
