[package]
name = "oxytail-theme-defaults"
description = "A set of uncolored sane defaults for creating simple themes."
documentation = "https://docs.rs/oxytail-theme-defaults/latest/oxytail_theme_defaults"
keywords = ["floem", "gui", "floem-themes", "daisyui", "widgets"]
categories = ["gui"]
license = "MIT"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = "0.1.1"
oxytail-base = "0.1.1"
