[package]
name = "widget-gallery"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
oxytail-theme-dark = { path = "../../oxytail-theme-dark" }
oxytail-base = { path = "../../oxytail-base" }
# oxytail-theme-dark = "0.1.2"
# oxytail-base = "0.1.2"
floem = "0.1.1"
